# agno_demo

./: .gitignore  CHANGELOG.md  QUICKSTART.md  README.md  SPEC.md  SPEC_CN.md  TECHNICAL.md  ZHIPU_SETUP.md  agno_agent.py  api_examples.py  benchmark.py  chat_cli.py  knowledge_base.py  main.py  pyproject.toml  test_agno_agent.py
api/: routes.py
app/: agent.py  api.py  cli.py
core/: config.py  knowledge.py
static/: index.html
tools/speech/: __init__.py  iflytek.py
